// file: proto/queue_job.proto
// version: 1.0.0
// guid: 1f3aeed2-6b5a-4e2c-bc6c-123456789abc

syntax = "proto3";

package subtitle.v1;

option go_package = "github.com/jdfalk/subtitle-manager/pkg/jobpb";

// TranslationJob represents a translation request for one or more subtitle files.
message TranslationJob {
  // Paths to subtitle files to translate. Use one entry for single-file jobs.
  repeated string input_paths = 1;
  // Destination path for the output subtitle file when translating a single file.
  string output_path = 2;
  // Target language code, e.g. "en" or "es".
  string language = 3;
  // Translation service identifier (google, gpt, grpc).
  string service = 4;
  // API key for Google Translate when using the google service.
  string google_key = 5;
  // API key for OpenAI when using the gpt service.
  string gpt_key = 6;
  // Address of a remote gRPC translator service.
  string grpc_addr = 7;
  // Number of workers for batch translation.
  int32 workers = 8;
}
